# fenn

./: .codacy.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  publish.bat  pyproject.toml
.githooks/: commit-msg.py
.github/workflows/: ci.yaml  tests.yaml  zizmor.yml
.zed/: settings.json
docs/: mkdocs.yml
docs/source/: index.rst
docs/src/: index.md  pull_command.md
docs/src/user_guide/: logger.md
fenn/: __init__.py  app.py  exceptions.py  exporter.py  keystore.py  logging.py  parser.py  reproducibility.py
fenn/agents/: __init__.py  __init__.pyi  agent.py  llm.py  node.py  tools.py
fenn/agents/rag/: chunker.py  llm.py  loader.py  rag.py  rag_node.py  retriever.py
fenn/args/: parser.py
fenn/cli/: __init__.py  auth.py  dashboard.py  grid.py  list.py  profile.py  pull.py  run.py
fenn/core/: fenn.py
fenn/dashboard/: app.py  auth.py  responses.py  runner.py  scanner.py  token_store.py  types.py  validation.py
fenn/dashboard/static/: app.js  style.css
fenn/dashboard/templates/: base.html  connect.html  index.html  project.html  session.html  templates.html
fenn/datasets/: text_dataset.py
fenn/experimental/vision/: color_mode.py  image_batch_check.py  image_dir_summary.py  resize.py  summary.py
fenn/nn/: __init__.py  checkpoint.py  model_pretty_printer.py
fenn/nn/models/: __init__.py  lstm.py
fenn/nn/trainers/: classification_trainer.py  lora_trainer.py  regression_trainer.py  trainer.py
fenn/nn/utils/: checkpoint.py  state.py
fenn/notification/: notifier.py  service.py
fenn/notification/services/: discord.py  redeliver.py  telegram.py
fenn/profiling_results/sample/: cprofile.prof  cprofile.txt
fenn/remote/: __init__.py  artifacts.py  client.py  credentials.py  local_runner.py  workspace.py
fenn/tabular/: __init__.py
fenn/utils/: logging.py
models/: iris_binary_mlp_best.pt  iris_binary_mlp_epoch_10.pt  iris_binary_mlp_epoch_15.pt  iris_binary_mlp_epoch_20.pt  iris_binary_mlp_epoch_25.pt  iris_binary_mlp_epoch_30.pt  iris_binary_mlp_epoch_5.pt
src/fenn/: __init__.py
src/fenn/agents/: __init__.py  __init__.pyi  agent.py  llm.py  node.py  tools.py
src/fenn/args/: __init__.py  parser.py
src/fenn/cli/: __init__.py  create_command.py  grid.py  list.py  pull.py  pull_command.py  utils.py
src/fenn/core/: __init__.py  exporter.py  fenn.py
src/fenn/dashboard/: app.py  scanner.py
src/fenn/datasets/: __init__.py  text_dataset.py
src/fenn/export/: __init__.py  exporter.py
src/fenn/logging/: __init__.py  logger.py
src/fenn/nn/: __init__.py
src/fenn/notification/: __init__.py  notifier.py  service.py
src/fenn/remote/: local_runner.py
src/fenn/secrets/: __init__.py  keystore.py
src/fenn/tabular/: __init__.py
src/fenn/utils/: __init__.py
src/fenn/vision/: __init__.py  vision_utils.py
src/smle/: __init__.py
src/smle/Notification/: discord_service.py  notifier.py  service.py
src/tests/: conftest.py
src/tests/agents/: test_flow.py  test_llm.py  test_rag_node.py
src/tests/cli/: test_grid_command.py  test_pull_command.py  test_run_command.py
src/tests/core/: test_exporter.py
src/tests/dashboard/: test_api.py  test_scanner_cache.py
src/tests/nn/: test_model_pretty_printer.py
src/tests/notification/: test_discord_service.py  test_resend_service.py  (+2 more)
tests/templates/: test_temp_main.py
tests/unit/: test_print_redirection.py
(+72 files in other folders)
